# russian-markets-lab

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: execution_comparison.metadata.json  execution_comparison.parquet  futures_basis.metadata.json  futures_basis.parquet  liquidity_radar.metadata.json  liquidity_radar.parquet  market_universe.metadata.json  market_universe.parquet  options_chain_features.metadata.json  options_chain_features.parquet  risk_snapshot.metadata.json  risk_snapshot.parquet
docs/: audit.md  data_integrity_audit.md  data_sources.md  limitations.md  methodology.md  project_status.md  public_readiness.md
notebooks/: 01_market_universe.ipynb  02_liquidity_radar.ipynb  03_futures_basis.ipynb  04_options_surface.ipynb  05_risk_engine.ipynb  06_execution_simulator.ipynb  07_strategy_research.ipynb
reports/: derivatives_risk_report.html  execution_cost_report.html  moex_liquidity_report.html  project_overview_report.html
src/russian_markets_lab/: __init__.py  cli.py  config.py  paths.py
src/russian_markets_lab/analytics/: __init__.py  execution.py  futures_basis.py  liquidity.py  market_universe.py  options_greeks.py  options_surface.py  risk.py  (+1 more)
tests/: test_backtester.py  test_cache.py  test_costs.py  test_dashboard_charts.py  test_dashboard_data_loader.py  test_dashboard_views.py  test_data_io.py  test_execution.py  test_futures_basis.py  test_liquidity.py  test_metadata.py  test_moex_client.py  test_no_fake_production_data.py  test_options_greeks.py  test_pipelines.py  test_risk.py
(+43 files in other folders)
