[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "russian-markets-lab"
version = "0.1.0"
description = "Research platform for MOEX liquidity, derivatives, risk, and execution analysis."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Russian Markets Lab" }]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "requests>=2.31",
  "scipy>=1.10",
  "statsmodels>=0.14",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "plotly>=5.18",
  "streamlit>=1.30",
  "pyarrow>=14.0",
  "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
